--- a/ansible/roles/analytics-spark-provision/tasks/main.yml
+++ b/ansible/roles/analytics-spark-provision/tasks/main.yml
@@ -4,6 +4,7 @@
   become: yes
   become_user: "{{ analytics_user }}"
   get_url: url={{ spark_url }} dest={{ analytics.home }}/spark-2.0.1-bin-hadoop2.7.tgz force=no owner={{ analytics_user }} group={{ analytics_group }}
+  validate_certs: no
 
 - name: Unarchive Spark 2.0.1 hadoop 2.7
   become: yes
@@ -29,6 +30,7 @@
   become: yes
   become_user: "{{ analytics_user }}"
   get_url: url={{ guava_url }} dest={{ analytics.home }}/spark-2.0.1-bin-hadoop2.7/jars/guava-19.0.jar timeout=1000 force=no owner={{ analytics_user }} group={{ analytics_group }}
+  validate_certs: no
 
 - name: Remove jets3t 0.9.3 from Spark jars folder
   become: yes
@@ -39,11 +41,13 @@
   become: yes
   become_user: "{{ analytics_user }}"
   get_url: url={{ jets3t_url }} dest={{ analytics.home }}/spark-2.0.1-bin-hadoop2.7/jars/jets3t-0.9.4.jar timeout=1000 force=no owner={{ analytics_user }} group={{ analytics_group }}
+  validate_certs: no
 
 - name: Download hadoop-aws 2.7.3 and copy to Spark jars folder
   become: yes
   become_user: "{{ analytics_user }}"
   get_url: url={{ hadoop_aws_url }} dest={{ analytics.home }}/spark-2.0.1-bin-hadoop2.7/jars/hadoop-aws-2.7.3.jar timeout=1000 force=no owner={{ analytics_user }} group={{ analytics_group }}
+  validate_certs: no
 
 - name: Remove java-xmlbuilder 1.0 from Spark jars folder
   become: yes
@@ -54,6 +58,7 @@
   become: yes
   become_user: "{{ analytics_user }}"
   get_url: url={{ java_xmlbuilder_url }} dest={{ analytics.home }}/spark-2.0.1-bin-hadoop2.7/jars/java-xmlbuilder-1.1.jar timeout=1000 force=no owner={{ analytics_user }} group={{ analytics_group }}
+  validate_certs: no
 
 - name: Update spark default conf
   become: yes
@@ -91,6 +96,7 @@
   become: yes
   become_user: "{{ analytics_user }}"
   get_url: url=http://downloads.mesosphere.com/kafka/assets/kafka_2.11-0.10.1.0.tgz dest={{ analytics.home }}/kafka_2.11-0.10.1.0.tgz force=no owner={{ analytics_user }} group={{ analytics_group }}
+  validate_certs: no
   tags:
     - kafka-provision
 
